Making the thing compilable on 1.4.x

--- a/Source/KerbalAlarmClock/KerbalAlarmClock.csproj
+++ b/Source/KerbalAlarmClock/KerbalAlarmClock.csproj
@@ -3,6 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <!-- Configuration Defaults; can be overridden in the .user file -->
   <PropertyGroup>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
